content/terraform-cdk/v0.15.x/docs/cdktf/concepts/tokens.mdx
---
page_title: Tokens - CDK for Terraform
description: >-
  Tokens allow CDK for Terraform to resolve programming language types to
  Terraform language syntax.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-04-29T15:45:46-05:00
last_modified: 2025-04-29T15:45:46-05:00
# END AUTO GENERATED METADATA
---

# Tokens

Tokens represent values that are unknown until Terraform applies your configuration. For example, names of cloud resources are only assigned upon creation.

Some attributes specified using CDK for Terraform (CDKTF) may not directly map to the values required for Terraform configurations. You can use [Tokens](https://docs.aws.amazon.com/cdk/latest/guide/tokens.html) to cast these attributes to the correct Terraform language syntax.

## Use Tokens

You may need to use Tokens for:

- [Module outputs](/cdktf/concepts/modules) for boolean, string, lists, maps, and other complex types.
- Resource attributes (such as `id`).
- Terraform outputs based on resource attributes.
- Using Terraforms `null` type.

### Example

An EKS module requires a _list_ of subnet ids in order to create a cluster. The VPC module outputs a list of subnets.

To pass the subnet id list to the EKS module, you can use `publicSubnetsOutput` to retrieve the list from the VPC. However, the `subnets` attribute
requires a list of strings. Use `Token.asList(vpc.publicSubnetsOutput)` to cast the interpolated module
output as a list of strings.

<!-- #NEXT_CODE_BLOCK_SOURCE:ts examples/typescript/documentation#tokens -->
<!-- #NEXT_CODE_BLOCK_SOURCE:java examples/java/documentation#tokens -->
<!-- #NEXT_CODE_BLOCK_SOURCE:python examples/python/documentation#tokens -->
<!-- #NEXT_CODE_BLOCK_SOURCE:csharp examples/csharp/documentation#tokens -->
<!-- #NEXT_CODE_BLOCK_SOURCE:go examples/go/documentation#tokens -->

<CodeTabs>

```ts
import { TerraformStack, TerraformVariable, Token } from "cdktf";
import { Construct } from "constructs";
import { Vpc } from "./.gen/modules/terraform-aws-modules/aws/vpc";
import { Eks } from "./.gen/modules/terraform-aws-modules/aws/eks";

export class TokensStack extends TerraformStack {
  constructor(scope: Construct, id: string, vpcName: string) {
    super(scope, id);

    const logRetention = new TerraformVariable(this, "logRetentionInDays", {
      type: "number",
    });

    const vpc = new Vpc(this, vpcName, {
      name: vpcName,
      publicSubnets: ["10.0.1.0/24", "10.0.2.0/24"],
    });

    new Eks(this, "EksModule", {
      clusterName: "my-kubernetes-cluster",
      subnetIds: Token.asList(vpc.publicSubnetsOutput),
      cloudwatchLogGroupRetentionInDays: logRetention.numberValue,
    });
  }
}
```

```java
        TerraformVariable logRetention = new TerraformVariable(this, "logRetentionInDays", TerraformVariableConfig.builder()
                .type("number")
                .build()
        );

        Vpc vpc = new Vpc(this, "vpcName", VpcConfig.builder()
                .name("vpcName")
                .publicSubnets(Arrays.asList("10.0.1.0/24", "10.0.2.0/24"))
                .build()
        );

        new Eks(this, "EksModules", EksConfig.builder()
                .vpcId(vpc.getVpcIdOutput())
                .clusterName("my-kubernetes-cluster")
                .subnets(Token.asList(vpc.getPublicSubnetsOutput()))
                .clusterCreateTimeout(logRetention.getNumberValue())
                .build()
        );
```

```python
        log_retention = TerraformVariable(self, "logRetentionInDays",
            type = "number"
        )

        vpc = Vpc(self, "vpcName",
            name = "vpcName",
            public_subnets = ["10.0.1.0/24", "10.0.2.0/24"]
        )

        Eks(self, "EksModules",
            vpc_id = vpc.vpc_id_output,
            cluster_name = "my-kubernetes-cluster",
            subnets = Token.as_list(vpc.public_subnets_output),
            cluster_create_timeout = log_retention.number_value
        )
```

```csharp
            // Add this to your project's .csproj file:
            // <ItemGroup>
            //     <ProjectReference Include=".gen\vpc\vpc.csproj" />
            // </ItemGroup>
            // <ItemGroup>
            //     <ProjectReference Include=".gen\eks\eks.csproj" />
            // </ItemGroup>
            TerraformVariable clusterCreateTimeout = new TerraformVariable(this, "clusterCreateTimeout", new TerraformVariableConfig
            {
                Type = "number"
            });

            Vpc vpc = new Vpc(this, "vpc", new VpcConfig
            {
                Name = "vpc",
                PublicSubnets = new string[] { "10.0.1.0/24", "10.0.2.0/24" }
            });

            new Eks(this, "eks", new EksConfig
            {
                ClusterName = "my-kubernetes-cluster",
                Subnets = Token.AsList(vpc.PublicSubnetsOutput),
                VpcId = vpc.VpcIdOutput,
                ClusterCreateTimeout = clusterCreateTimeout.NumberValue
            });
```

```go
import (
	"github.com/aws/constructs-go/constructs/v10"
	"github.com/aws/jsii-runtime-go"
	"github.com/hashicorp/terraform-cdk-go/cdktf"
	"github.com/hashicorp/terraform-cdk/examples/go/documentation/generated/terraform-aws-modules/aws/eks"
	"github.com/hashicorp/terraform-cdk/examples/go/documentation/generated/terraform-aws-modules/aws/vpc"
)

func NewTokensStack(scope constructs.Construct, name string, vpcName string) cdktf.TerraformStack {
	stack := cdktf.NewTerraformStack(scope, &name)

	logRetention := cdktf.NewTerraformVariable(stack, jsii.String("logRetentionInDays"), &cdktf.TerraformVariableConfig{
		Type: jsii.String("number"),
	})

	vpc := vpc.NewVpc(stack, &vpcName, &vpc.VpcConfig{
		Name:          &vpcName,
		PublicSubnets: &[]*string{jsii.String("10.0.1.0/24"), jsii.String("10.0.2.0/24")},
	})

	eks.NewEks(stack, jsii.String("EksModule"), &eks.EksConfig{
		ClusterName:                       jsii.String("my-kubernetes-cluster"),
		SubnetIds:                         cdktf.Token_AsList(vpc.PublicSubnetsOutput(), nil),
		CloudwatchLogGroupRetentionInDays: logRetention.NumberValue(),
	})

	return stack
}

```

</CodeTabs>

Initially, CDKTF will resolve `Token.asList(vpc.publicSubnetsOutput)` to `["#{TOKEN[TOKEN.9]}"]` and `logRetention.numberValue` to a big negative number like `-123828381238238`.
Later in synthesis, CDKTF will resolve the token to `${module.<module id>.public_subnets}` and `${var.logRetentionInDays}`.

```json
{
  "module": {
    "helloterraEksModule5DDB67AE": {
      "cluster_name": "my-kubernetes-cluster",
      "subnets": "${module.helloterraMyVpc62D94C17.public_subnets}"
    }
  }
}
```

Refer to the [AWS CDK documentation](https://docs.aws.amazon.com/cdk/latest/guide/tokens.html) for more detailed information about tokens.

### Using Terraform's `null` value

Some edge cases require passing the Terraform `null` value to for example an attribute of a resource.

<CodeTabs>

```typescript
import { Token } from "cdktf";
Token.nullValue();
```

```python
from cdktf import Token
Token.null_value()
```

```java
import com.hashicorp.cdktf.Token;
Token.nullValue()
```

```csharp
using HashiCorp.Cdktf;
Token.NullValue()
```

```go
import "github.com/hashicorp/terraform-cdk-go/cdktf"
cdktf.Token_NullValue()
```

</CodeTabs>
